--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,10 +67,10 @@
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
             android:background="#83A0C4"
-            android:fontFamily="@font/jsmath"
+            android:fontFamily="@font/caveat"
             android:hint="Email"
             android:padding="10dp"
-            android:textColorHint="#FFFFFF"
+            android:textColorHint="#80FFFFFF"
             android:textSize="25dp"
             android:gravity="center"
             android:textAlignment="center" />
@@ -82,11 +82,11 @@
             android:layout_height="48dp"
             android:layout_marginTop="10dp"
             android:background="#83A0C4"
-            android:fontFamily="@font/jsmath"
+            android:fontFamily="@font/caveat"
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="10dp"
-            android:textColorHint="#FFFFFF"
+            android:textColorHint="#80FFFFFF"
             android:textSize="25dp"
             android:gravity="center"
             android:textAlignment="center" />
