14th commit: fix bug

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -7,4 +7,5 @@
     <item name="saveNoteButton" type="id" />
     <item name="selectImageButton" type="id" />
     <item name="ImageButton" type="id" />
+    <item name="textView" type="id" />
 </resources>
